--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <div class="navbar content">
+        <div class="nav__content">
             <div class="logo"><a href="#">Lonke</a></div>
             <label for="check" class="checkbox"> 
             <i class="ri-menu-line"></i>
@@ -28,7 +28,7 @@
         </div>
     </nav>
     <section class="section">
-        <div class="section container">
+        <div class="section__container">
          <div class="content">
             <p class="subtitle">Hello</p>
             <h1 class="title">
@@ -40,8 +40,8 @@
                 Welcome! to a new chapter of my career journey - 
                 a transition into the dynamic world of web development
             </p>
-            <div class="action btns">
-                <button class="Reach Me">Contact Me</button>
+            <div class="action__btns">
+                <button class="reach__me">Reach Me</button>
                 <button class="portfolio">Portfolio</button>
                 <div class="image">
                     <img src="css/images/professional.jpg" alt="profile">
