navbar & landing page styling

--- a/index.html
+++ b/index.html
@@ -9,47 +9,69 @@
     <title>Lonke Hintsho's Portfolio</title>
 </head>
 <body>
-    <nav>
-        <div class="nav__content">
-            <div class="logo"><a href="#">Lonke</a></div>
-            <label for="check" class="checkbox"> 
-            <i class="ri-menu-line"></i>
-            <input type="checkbox" name="check" id="check">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Education</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Work Experience</a></li>
-                <li><a href="#">Project</a></li>
-                <li><a href="#">Testimonials</a></li>
-                <li><a href="#">Reach Me</a></li>
-            </label>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img class="img-fluid" src="css/images/logo (2).png" alt="logo">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#home">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#about">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Education</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Skills</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Experience</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Projects</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Testimonials</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Reach me</a>
+              </li>
+            </ul>
+          </div>
         </div>
-    </nav>
-    <section class="section">
-        <div class="section__container">
-         <div class="content">
-            <p class="subtitle">Hello</p>
-            <h1 class="title">
-                I'm <span>Lonke <hr>an</span> aspiring Web Developer
-            </h1>
-            <p class="description">
-                Exploring Boundless Horizons: The Journery of an Early 
-                Childhood Care and Education Graduate Aspiring to Web Development Mastery
-                Welcome! to a new chapter of my career journey - 
-                a transition into the dynamic world of web development
-            </p>
-            <div class="action__btns">
-                <button class="reach__me">Reach Me</button>
-                <button class="portfolio">Portfolio</button>
+      </nav>
+    <main class="container-fluid">
+        <section class="section">
+            <div class="section__container">
                 <div class="image">
                     <img src="css/images/professional.jpg" alt="profile">
                 </div>
+                <h2 class="title">
+                    <span> Hello!  <hr> I am Lonke an  aspiring Web Developer</span>
+                </h2> <p class="description">
+                    Exploring Boundless Horizons: The Journery of an Early 
+                    Childhood Care and Education Graduate Aspiring to Web Development Mastery
+                    Welcome! to a new chapter of my career journey - 
+                    a transition into the dynamic world of web development.
+                </p>
+                <div class="action__btns">
+                    <button class="reach__me">Reach Me</button>
+                    <button class="portfolio">Portfolio</button>
+                </div>
+             </div>
             </div>
-         </div>
-        </div>
-    </section>
+        </section>
+    </main>
+    <footer class="container-fluid">
+
+    </footer>
     
 </body>
 </html>
