--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         </div>
       </nav>
     <main class="container-fluid">
-        <section class="section">
-            <div class="section__container">
+        <section class="homepage">
+            <div class="section__container1">
                 <div class="image">
                     <img src="css/images/professional.jpg" alt="profile">
                 </div>
@@ -68,6 +68,28 @@
              </div>
             </div>
         </section>
+        <section class="about">
+            <div class="section__container2">
+                <h2 class="subtitle"><span>About Me</span> <hr></h2>
+                <p class="description">
+                    I am a passionate Educare graduate with a burning desire to carve a path in
+                    the dynamic world of web development. With a foundation rooted in education and a vision set on innovation,
+                     I am on a mission to harness the power of technology to create
+                    immersive digital experiences that inspire, educate, and empower.
+                    As a recent graduate in the education field, I have emerged 
+                    with a solid understanding of pedagogy, learning theories, 
+                    and the transformative potential of education. 
+                    While my journey began in the realm of teaching and learning,
+                    my insatiable curiosity and fascination with technology
+                    have led me to embark on a new adventure: 
+                    web development at Life Choices Academy.
+                    Armed with a thirst for knowledge and a relentless drive to excel, 
+                    I am eager to leverage my skills and passion to make a meaningful impact in the digital landscape.
+                </p>
+            </div>
+        </section>
+
+
     </main>
     <footer class="container-fluid">
 
