--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <main class="container-fluid">
         <section class="homepage">
             <div class="section__container1">
-                <div class="image">
+                <div class="image1">
                     <img src="css/images/professional.jpg" alt="profile">
                 </div>
                 <h2 class="title">
@@ -69,8 +69,8 @@
             </div>
         </section>
         <section class="about">
+            <h2 class="subtitle"><span>About Me</span> <hr></h2>
             <div class="section__container2">
-                <h2 class="subtitle"><span>About Me</span> <hr></h2>
                 <p class="description">
                     I am a passionate Educare graduate with a burning desire to carve a path in
                     the dynamic world of web development. With a foundation rooted in education and a vision set on innovation,
@@ -88,8 +88,31 @@
                 </p>
             </div>
         </section>
-
-
+        <section class="education">
+            <h2 class="subtitle"><span>Education</span> <hr></h2>
+            <div class="section__container3">
+                <div class="image2">
+                    <img src="css/images/Graduation 2.jpg" alt="education">
+                </div>
+                <p>
+                    Life Choice Academy <br> 
+                    Web Development Course <br>
+                    Year: April 2022 - Now
+                </p>
+                <p>
+                    Rosebank College: 2020 -  2021<br>
+                    Higher Certificate in
+                    Early Childhood Care and Education <br>
+                    Graduated June 2022
+                </p> 
+                <p>
+                     St. Patrick’s SSS <br>
+                     Matric
+                     Diploma Pass <br>
+                    Year: 2016
+                </p>
+            </div>
+        </section>
     </main>
     <footer class="container-fluid">
 
