--- a/index.html
+++ b/index.html
@@ -113,6 +113,47 @@
                 </p>
             </div>
         </section>
+        <section class="experience">
+            <h2 class="subtitle"><span>Experience</span><hr></h2>
+            <div class="section__container4">
+                <div class="description1">
+                    <p>
+                        <h5><span>Aunty F's Day Care and After Care  | Student Teacher Nov 2021 - Dec 2021 <br></span><br></h5>
+                        <br>
+                        Teaching practicals at Aunty F's Day Care and After Care placement through IIE Rosebank College <br>
+                        <br>
+                    <ul>
+                        <li>
+                        - Keep a reflective journal for the duration of the 15 days, collaborate and reflect with the mentor on various aspects of practice. <br>
+                        - Observe two lessons presented by a qualified Foundation Phase teacher. <br>
+                        - Present three lessons that need to be formally assessed by the mentor. <br>
+                        - Collect, evaluate and reflect on examples of teaching practice. <br>
+                        - Facilitating various activities for children including songs, games, and storytelling. <br>
+                        - Helping children reach developmental milestones. <br>
+                        - Ensuring that all school supplies and classroom supplies are ordered and delivered on time. <br>
+                        - Adhering to health/safety and sanitation procedures. <br>
+                        - Maintaining a clean, neat and tidy classroom. <br>
+                       </li>
+                    </ul>
+                    </p>
+                </div>
+                <br>
+                <div class="description2">
+                    <p>
+                        <h5><span>Teacher Assistant | ORT SA Cape Education
+                            JAN 2019 - DEC 2019 </span></h5>
+                        <ul>
+                            <li> 
+                               - Preparing and organising teaching material and methods for the training of external moderators. <br> 
+                               -  Collaborating with Teachers to implement lesson plans. <br>
+                               -  Supporting teachers in managing class behavior and assisting learners with completing tasks and carrying out administrative tasks such as planning and organsing logistics for
+                                school activities, outings and sports events. 
+                            </li>
+                        </ul>
+                    </p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="container-fluid">
 
