Skills Content and rectified Mistakes

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </nav>
     <main class="container-fluid">
         <section class="homepage">
-            <div class="section__container1">
+            <div class="container-fluid">
                 <div class="image1">
                     <img src="https://github.com/LonkeHintsho/Project-Pictures/blob/main/images/professional.jpg?raw=true" alt="profile">
                 </div>
@@ -76,9 +76,9 @@
             </div>
         </section>
         <section class="about" id="about">
-            <h2 class="subtitle"><span>About Me</span> <hr></h2>
-            <div class="section__container2 vh-100">
-                <p class="description1">
+            <div class="container-fluid">
+                <h2 class="subtitle"><span>About Me</span> <hr></h2>
+                
                     I am a passionate Educare graduate with a burning desire to carve a path in
                     the dynamic world of web development. With a foundation rooted in education and a vision set on innovation,
                      I am on a mission to harness the power of technology to create
@@ -92,14 +92,14 @@
                     web development at Life Choices Academy.
                     Armed with a thirst for knowledge and a relentless drive to excel, 
                     I am eager to leverage my skills and passion to make a meaningful impact in the digital landscape.
-                </p>
+
             </div>
         </section>
         <section class="education">
-            <h2 class="subtitle"><span>Education</span> <hr></h2>
-            <div class="section__container3">
-                <div class="image2">
-                    <img src="https://github.com/LonkeHintsho/Project-Pictures/blob/main/images/Graduation%202.jpg?raw=true" alt="education">
+            <div class="container-fluid">
+                <h2 class="subtitle"><span>Education</span> <hr></h2>
+                <div class="card" style="width: 10rem;">
+                    <img src="https://github.com/LonkeHintsho/Project-Pictures/blob/main/images/Graduation%202.jpg?raw=true" class="card-img-top" alt="education">
                 </div>
                 <p>
                     Life Choice Academy <br> 
@@ -119,10 +119,9 @@
             </div>
         </section>
         <section class="experience">
-            <h2 class="subtitle"><span>Experience</span><hr></h2>
-            <div class="section__container4">
-                <div class="description2">
-                    <p>
+            <div class="container-fluid">
+                <h2 class="subtitle"><span>Experience</span><hr></h2>
+                <div class="card" style=" background-color: rgb(127, 170, 203);">
                         <h5><span>Aunty F's Day Care and After Care  | Student Teacher Nov 2021 - Dec 2021 <br></span><br></h5>
                         <br>
                         Teaching practicals at Aunty F's Day Care and After Care placement through IIE Rosebank College <br>
@@ -140,11 +139,9 @@
                         - Maintaining a clean, neat and tidy classroom. <br>
                        </li>
                     </ul>
-                    </p>
                 </div>
                 <br>
-                <div class="description3">
-                    <p>
+                <div class="card"  style= "background-color: rgb(127, 170, 203);">
                         <h5><span>Teacher Assistant | ORT SA Cape Education
                             JAN 2019 - DEC 2019 </span></h5>
                         <ul>
@@ -160,19 +157,58 @@
             </div>
         </section>
         <section class="projects">
-            <h2 class="subtitle"><span>Projects</span></h2>
-                <div class="section__container5">
-                    <div class="image4">
-                        <img src="https://github.com/LonkeHintsho/Project-Pictures/blob/main/images/keyboard.png?raw=true" alt="keyboard">
+            <h2 class="subtitle"><span>Projects</span><hr></h2>
+                <div class="container-fluid">
+                    <div class="card">
+                        <img src="https://github.com/LonkeHintsho/Project-Pictures/blob/main/images/keyboard.png?raw=true" class="card-img-top" alt="keyboard">
                     </div>
-                    <div class="image4">
-                        <img src="https://github.com/LonkeHintsho/Project-Pictures/blob/main/images/calculator.png?raw=true" alt="calculator">
+                    <div class="card">
+                        <img src="https://github.com/LonkeHintsho/Project-Pictures/blob/main/images/calculator.png?raw=true" class="card-img-top" alt="calculator">
                     </div>
-                    <div class="image4">
-                        <img src="https://github.com/LonkeHintsho/Project-Pictures/blob/main/images/Screenshot%202024-05-07%20121857.png?raw=true" alt="Flex">
+                    <div class="card">
+                        <img src="https://github.com/LonkeHintsho/Project-Pictures/blob/main/images/Screenshot%202024-05-07%20121857.png?raw=true" class="card-img-top" alt="flex">
                     </div>
                 </div>
         </section>
+        <section class="skills">
+            <h2 class="subtitle"><span>Skills</span><hr></h2>
+            <div class="container-fluid">
+               <div class="card" style="width: 18rem;">
+                 <img src="https://github.com/LonkeHintsho/Project-Pictures/blob/main/images/css%20&%20html.png?raw=true" class="card-img-top" alt="HTML">
+                 <div class="card-body">
+                   <h3>HTML<span>5</span></h3>
+                   <p class="card-text">Proficient in HTML5 & css, with a beginner-level expertise.</p>
+                </div>
+            </div>
+            <div class="card" style="background-color: rgb(140, 162, 182);">
+                    <h5><span>Early Childhood Care & Education</span></h5>
+                    <ul>
+                        <li> 
+                            Effective Communication <br>
+                            Observation and Assessment <br>
+                            Teamwork and Collaboration <br>
+                            Problem-Solving and Decision-Making <br>
+                            Professionalism and Ethical Practices <br>
+                            Understanding of Special Needs <br>
+                        </li>
+                    </ul>
+            </div>
+            <div class="card" style="background-color: rgb(140, 162, 182);">
+                    <h2 class="subtitle"><span> Web Development</span></h2>
+                    <ul>
+                        <li> 
+                            Programming Languages <br>
+                            Critical Thinking <br>
+                            Web Development <br>
+                             Frameworks and Libraries <br>
+                            Communication and Collaboration <br>
+                            Portfolio Development <br>
+                        </li>
+                    </ul>
+            </div>
+
+        </section>
+       
     </main>
     <footer class="container-fluid">
 
