Reach Me Content

--- a/index.html
+++ b/index.html
@@ -206,7 +206,29 @@
                         </li>
                     </ul>
             </div>
-
+            <section class="reach me">
+                <h2 class="subtitle"><span>Reach Me</span><hr></h2>
+                <div class="container-fluid">
+                    <div class="w3-padding-64 w3-content w3-text-grey" id="contact">
+                        <div class="w3-section">
+                          <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Cape Town, South Africa</p>
+                          <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: 067 085 9718</p>
+                          <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: lulonkehintsho@gmail.com</p>
+                        </div><br>
+                        <p>Let's get in touch. Send me a message:</p>
+                        <form action="/action_page.php" target="_blank">
+                          <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
+                          <p><input class="w3-input w3-padding-16" type="text" placeholder="Email" required name="Email"></p>
+                          <p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
+                          <p><input class="w3-input w3-padding-16" type="text" placeholder="Message" required name="Message"></p>
+                          <p>
+                            <button class="w3-button w3-light-grey w3-padding-xxlarge" type="submit">
+                              <i class="fa fa-paper-plane"></i> SEND MESSAGE
+                            </button>
+                          </p>
+                        </form>
+                </div>
+    
         </section>
        
     </main>
