--- a/index.html
+++ b/index.html
@@ -56,24 +56,29 @@
       </nav>
     <main class="container-fluid">
         <section class="homepage">
-            <div class="container-fluid">
-                <div class="image1">
-                    <img src="https://github.com/LonkeHintsho/Project-Pictures/blob/main/images/professional.jpg?raw=true" alt="profile">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div class="image1">
+                            <img src="https://github.com/LonkeHintsho/Project-Pictures/blob/main/images/professional.jpg?raw=true" alt="profile">
+                        </div>
+                        <h2 class="title">
+                            <span> Hello!  <hr> I am Lonke an  aspiring Web Developer</span>
+                        </h2> <p class="description">
+                            Exploring Boundless Horizons: The Journery of an Early 
+                            Childhood Care and Education Graduate Aspiring to Web Development Mastery
+                            Welcome! to a new chapter of my career journey - 
+                            a transition into the dynamic world of web development.
+                        </p>
+                        <div class="action__btns">
+                            <button class="reach__me">Reach Me</button>
+                            <button class="portfolio">Portfolio</button>
+                        </div>
+                     </div>
+                    </div>
                 </div>
-                <h2 class="title">
-                    <span> Hello!  <hr> I am Lonke an  aspiring Web Developer</span>
-                </h2> <p class="description">
-                    Exploring Boundless Horizons: The Journery of an Early 
-                    Childhood Care and Education Graduate Aspiring to Web Development Mastery
-                    Welcome! to a new chapter of my career journey - 
-                    a transition into the dynamic world of web development.
-                </p>
-                <div class="action__btns">
-                    <button class="reach__me">Reach Me</button>
-                    <button class="portfolio">Portfolio</button>
                 </div>
-             </div>
-            </div>
+
         </section>
         <section class="about" id="about">
             <div class="container-fluid">
@@ -98,7 +103,7 @@
         <section class="education">
             <div class="container-fluid">
                 <h2 class="subtitle"><span>Education</span> <hr></h2>
-                <div class="card" style="width: 10rem;">
+                <div class="card" style="width: 10rem; border: solid;">
                     <img src="https://github.com/LonkeHintsho/Project-Pictures/blob/main/images/Graduation%202.jpg?raw=true" class="card-img-top" alt="education">
                 </div>
                 <p>
@@ -121,7 +126,9 @@
         <section class="experience">
             <div class="container-fluid">
                 <h2 class="subtitle"><span>Experience</span><hr></h2>
-                <div class="card" style=" background-color: rgb(127, 170, 203);">
+                <div class="row">
+                    <div class="col">
+                <div class="card" style=" background-color: rgb(127, 170, 203); width: 20rem; border: solid;">
                         <h5><span>Aunty F's Day Care and After Care  | Student Teacher Nov 2021 - Dec 2021 <br></span><br></h5>
                         <br>
                         Teaching practicals at Aunty F's Day Care and After Care placement through IIE Rosebank College <br>
@@ -140,8 +147,9 @@
                        </li>
                     </ul>
                 </div>
-                <br>
-                <div class="card"  style= "background-color: rgb(127, 170, 203);">
+            </div>
+                <div class="col">
+                <div class="card"  style= "background-color: rgb(127, 170, 203); width: 20rem; border: solid;">
                         <h5><span>Teacher Assistant | ORT SA Cape Education
                             JAN 2019 - DEC 2019 </span></h5>
                         <ul>
@@ -155,80 +163,101 @@
                     </p>
                 </div>
             </div>
+            </div>
+            </div>
         </section>
         <section class="projects">
             <h2 class="subtitle"><span>Projects</span><hr></h2>
                 <div class="container-fluid">
-                    <div class="card">
-                        <img src="https://github.com/LonkeHintsho/Project-Pictures/blob/main/images/keyboard.png?raw=true" class="card-img-top" alt="keyboard">
-                    </div>
-                    <div class="card">
-                        <img src="https://github.com/LonkeHintsho/Project-Pictures/blob/main/images/calculator.png?raw=true" class="card-img-top" alt="calculator">
-                    </div>
-                    <div class="card">
-                        <img src="https://github.com/LonkeHintsho/Project-Pictures/blob/main/images/Screenshot%202024-05-07%20121857.png?raw=true" class="card-img-top" alt="flex">
-                    </div>
-                </div>
+                    <div class="row">
+                        <div class="col">
+                            <div class="card" style=" width: 20rem; border: solid;">
+                                <img src="https://github.com/LonkeHintsho/Project-Pictures/blob/main/images/keyboard.png?raw=true" class="card-img-top" alt="keyboard">
+                             </div>
+                         </div>
+                         <div class="col">
+                             <div class="card" style="width: 20rem; border: solid;">
+                                 <img src="https://github.com/LonkeHintsho/Project-Pictures/blob/main/images/calculator.png?raw=true" class="card-img-top" alt="calculator">
+                             </div>
+                         </div>
+                         
+                            <div class="card" style="width: 20rem; border: solid;">
+                                <img src="https://github.com/LonkeHintsho/Project-Pictures/blob/main/images/Screenshot%202024-05-07%20121857.png?raw=true" class="card-img-top" alt="flex">
+                            </div>
+                        </div>
+                        </div>
         </section>
         <section class="skills">
             <h2 class="subtitle"><span>Skills</span><hr></h2>
             <div class="container-fluid">
-               <div class="card" style="width: 18rem;">
-                 <img src="https://github.com/LonkeHintsho/Project-Pictures/blob/main/images/css%20&%20html.png?raw=true" class="card-img-top" alt="HTML">
-                 <div class="card-body">
-                   <h3>HTML<span>5</span></h3>
-                   <p class="card-text">Proficient in HTML5 & css, with a beginner-level expertise.</p>
-                </div>
-            </div>
-            <div class="card" style="background-color: rgb(140, 162, 182);">
-                    <h5><span>Early Childhood Care & Education</span></h5>
-                    <ul>
-                        <li> 
-                            Effective Communication <br>
-                            Observation and Assessment <br>
-                            Teamwork and Collaboration <br>
-                            Problem-Solving and Decision-Making <br>
-                            Professionalism and Ethical Practices <br>
-                            Understanding of Special Needs <br>
-                        </li>
-                    </ul>
-            </div>
-            <div class="card" style="background-color: rgb(140, 162, 182);">
-                    <h2 class="subtitle"><span> Web Development</span></h2>
-                    <ul>
-                        <li> 
-                            Programming Languages <br>
-                            Critical Thinking <br>
-                            Web Development <br>
-                             Frameworks and Libraries <br>
-                            Communication and Collaboration <br>
-                            Portfolio Development <br>
-                        </li>
-                    </ul>
+                <div class="row">
+                    <div class="col">
+                     <div class="card" style="width: 15rem; border: solid;">
+                          <img src="https://github.com/LonkeHintsho/Project-Pictures/blob/main/images/css%20&%20html.png?raw=true" class="card-img-top" alt="HTML">
+                          <div class="card-body">
+                            <h3>HTML<span>5</span></h3>
+                            <p class="card-text">Proficient in HTML5 & css, with a beginner-level expertise.</p>
+                         </div>
+                    </div>
+                    </div>
+                    <div class="col">
+                        <div class="card" style="background-color: rgb(140, 162, 182); width: 20rem; border: solid;">
+                                <h5><span>Early Childhood Care & Education</span></h5>
+                                <ul>
+                                    <li> 
+                                        Effective Communication <br>
+                                        Observation and Assessment <br>
+                                        Teamwork and Collaboration <br>
+                                        Problem-Solving and Decision-Making <br>
+                                        Professionalism and Ethical Practices <br>
+                                        Understanding of Special Needs <br>
+                                    </li>
+                                </ul>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card" style="background-color: rgb(140, 162, 182);width: 20rem; border: solid;">
+                                <h2 class="subtitle"><span> Web Development</span></h2>
+                                <ul>
+                                    <li> 
+                                        Programming Languages <br>
+                                        Critical Thinking <br>
+                                        Web Development <br>
+                                         Frameworks and Libraries <br>
+                                        Communication and Collaboration <br>
+                                        Portfolio Development <br>
+                                    </li>
+                                </ul>
+                        </div>
+                    </div>
             </div>
         </section>
-        <section class="reach me">
+        <section class="reachme">
             <h2 class="subtitle"><span>Reach Me</span><hr></h2>
             <div class="container-fluid">
-                <div class="w3-padding-64 w3-content w3-text-grey" id="contact">
-                    <div class="w3-section">
-                      <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Cape Town, South Africa</p>
-                      <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: 067 085 9718</p>
-                      <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: lulonkehintsho@gmail.com</p>
-                    </div><br>
-                    <p>Let's get in touch. Send me a message:</p>
-                    <form action="/action_page.php" target="_blank">
-                      <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
-                      <p><input class="w3-input w3-padding-16" type="text" placeholder="Email" required name="Email"></p>
-                      <p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
-                      <p><input class="w3-input w3-padding-16" type="text" placeholder="Message" required name="Message"></p>
-                      <p>
-                        <button class="w3-button w3-light-grey w3-padding-xxlarge" type="submit">
-                          <i class="fa fa-paper-plane"></i> SEND MESSAGE
-                        </button>
-                      </p>
-                    </form>
-            </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="w3-padding-64 w3-content w3-text-grey" id="contact">
+                            <div class="w3-section">
+                              <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Cape Town, South Africa</p>
+                              <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: 067 085 9718</p>
+                              <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: lulonkehintsho@gmail.com</p>
+                            </div><br>
+                            <p>Let's get in touch. Send me a message:</p>
+                            <form action="/action_page.php" target="_blank">
+                              <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
+                              <p><input class="w3-input w3-padding-16" type="text" placeholder="Email" required name="Email"></p>
+                              <p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
+                              <p><input class="w3-input w3-padding-16" type="text" placeholder="Message" required name="Message"></p>
+                              <p>
+                                <button class="w3-button w3-light-grey w3-padding-xxlarge" type="submit">
+                                  <i class="fa fa-paper-plane"></i> SEND MESSAGE
+                                </button>
+                              </p>
+                            </form>
+                    </div>
+                    </div>
+                </div>
 
     </section>
        
