--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
                         </div>
         </section>
         <section class="skills">
+
             <h2 class="subtitle"><span>Skills</span><hr></h2>
             <div class="container-fluid">
                 <div class="row">
@@ -232,6 +233,7 @@
                     </div>
             </div>
         </section>
+        section.
         <section class="reachme">
             <h2 class="subtitle"><span>Reach Me</span><hr></h2>
             <div class="container-fluid">
