--- a/index.html
+++ b/index.html
@@ -206,11 +206,17 @@
                         </li>
                     </ul>
             </div>
-
         </section>
+
        
     </main>
     <footer class="container-fluid">
+        <div class="row bg-dark py-5">
+            <p class="h6 text-white text-center">
+                &copy; Copyrights Reserved
+            </p>
+
+        </div>
 
     </footer>
     
